<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertFood">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/other_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editReview"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/input_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textReview"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="452dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/food_review"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="#2E313D"
        android:onClick="showDatePickerDialog"
        android:text="날짜 선택"
        android:textColor="#F5F7FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMeal"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/choose_meal"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_meal"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/spinner_boarder"
        android:contextClickable="false"
        android:textAlignment="center"
        android:textColor="#F5F7FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPlace"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="196dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/choose_place"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_place"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/spinner_boarder"
        android:contextClickable="false"
        android:textAlignment="center"
        android:textColor="#F5F7FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="260dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/choose_picture"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/spinner_boarder"
        android:gravity="center"
        android:text="@string/choose_gallery"
        android:textAlignment="gravity"
        android:textColor="#2E313D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_place" />

    <TextView
        android:id="@+id/textMain"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="324dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/food_main"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fillMainMenu"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="Main Menu"
        android:gravity="center"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSide"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="388dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/food_side"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fillSideMenu"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="Side Menu"
        android:gravity="center"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="516dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/eat_time"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inputTime"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/spinner_boarder"
        android:gravity="center"
        android:text="시간 입력하기"
        android:textAlignment="gravity"
        android:textColor="#2E313D"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBudgt"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="580dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="@string/eat_budgt"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mealBudgt"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="580dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="Meal Cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="377dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="614dp"
        android:layout_marginEnd="28dp"
        android:background="#2E313D"
        android:gravity="center"
        android:text="추가하기"
        android:textAlignment="gravity"
        android:textColor="#F5F7FF"
        android:onClick="saveDataToDatabase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBudgt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonImage"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <LinearLayout
        android:id="@+id/timePickerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonImage"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="MissingConstraints">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonImage"
            android:layout_marginTop="16dp"
            android:timePickerMode="spinner"
            android:layout_centerHorizontal="true"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
